2008-08-29  Jason Rumney  <jasonr@gnu.org>

	* w32uniscribe.c (uniscribe_check_otf): Don't fallback on DFLT script.

2008-08-29  Eli Zaretskii  <eliz@gnu.org>

	* composite.c (fill_gstring_body): Avoid compiler warnings.

	* font.c (font_fill_lglyph_metrics): Use EMACS_INT in
	LGLYPH_SET_CODE to avoid compiler warnings.

	* makefile.w32-in ($(BLD)/w32uniscribe.$(O)): Depend on composite.h

	* composite.h (LGLYPH_SET_CODE): Cast `val' to EMACS_INT.

	* w32uniscribe.c (uniscribe_shape): Shut up compiler warning in
	LGLYPH_SET_CODE.

2008-08-29  Kenichi Handa  <handa@m17n.org>

	* fileio.c (report_file_error): Don't downcase the first character
	of errstring if it is still unibyte.

2008-08-29  Kenichi Handa  <handa@m17n.org>

	These changes are to re-implement the automatic composition so
	that it doesn't use text properties.

	* Makefile.in (ftfont.o): Depend on composite.h.
	(composite.o): Depend dispextern.h, font.h, frame, and window.h.

	* character.h (Vunicode_category_table): Extern it.

	* character.c (Vunicode_category_table): New variable.
	(syms_of_character): DEFVAR_LISP Vunicode_category_table.

	* chartab.c (optimize_sub_char_table): Perform more greedy
	optimization.

	* composite.h (enum composition_method): Delete
	COMPOSITION_WITH_GLYPH_STRING.
	(COMPOSITION_METHOD): Dont' check COMPOSITION_WITH_GLYPH_STRING.
	(Vcomposition_function_table): Extern it.
	(LGSTRING_XXX, LGLYPH_XXX): Macros moved from font.h.
	(composition_gstring_put_cache, composition_gstring_from_id)
	(composition_gstring_p, composition_gstring_width)
	(composition_compute_stop_pos, composition_reseat_it)
	(composition_update_it, composition_adjust_point): Extern them.
	(Fcomposition_get_gstring): EXFUN it.

	* composite.c: Include window.h, frame.h, dispextern.h font.h.
	(Vcomposition_function_table)
	(get_composition_id): Don't handle COMPOSITION_WITH_GLYPH_STRING.
	(gstring_hash_table, gstring_work, gstring_work_headers): New
	variables.